amp-vk: add playlist embed support

--- a/examples/vk.amp.html
+++ b/examples/vk.amp.html
@@ -11,6 +11,20 @@
 </head>
 <body>
 <div style="margin: 0 auto; max-width: 1000px; padding: 0 20px;">
+  <h2>VK Playlist</h2>
+
+  <h3>Layout: Responsive</h3>
+
+  <amp-vk
+      width="500"
+      height="300"
+      layout="responsive"
+      data-embedtype="playlist"
+      data-owner-id="-2000646569"
+      data-playlist-id="646569"
+      data-hash="ae82627d6c8bb4500d">
+  </amp-vk>
+
   <h2>VK Post</h2>
 
   <h3>Layout: Responsive</h3>
